Added slstatus submodule

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "dwm"]
 	path = dwm
 	url = https://github.com/zoomiti/dwm.git
+[submodule "slstatus"]
+	path = slstatus
+	url = https://git.suckless.org/slstatus
