--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "slstatus"]
 	path = slstatus
 	url = https://git.suckless.org/slstatus
+[submodule "dmenu"]
+	path = dmenu
+	url = https://git.suckless.org/dmenu
