Fixed gitmodule links

--- a/.gitmodules
+++ b/.gitmodules
@@ -3,7 +3,7 @@
 	url = https://github.com/zoomiti/dwm.git
 [submodule "slstatus"]
 	path = slstatus
-	url = https://git.suckless.org/slstatus
+	url = https://github.com/zoomiti/slstatus.git
 [submodule "dmenu"]
 	path = dmenu
-	url = https://git.suckless.org/dmenu
+	url = https://github.com/zoomiti/dmenu.git
