--- a/.gitmodules
+++ b/.gitmodules
@@ -10,3 +10,6 @@
 [submodule "dwmblocks"]
 	path = dwmblocks
 	url = https://github.com/zoomiti/dwmblocks.git
+[submodule "dotfiles"]
+	path = dotfiles
+	url = https://github.com/zoomiti/dotfiles.git
